--- a/info442/public/home.html
+++ b/info442/public/home.html
@@ -156,6 +156,14 @@
                 </div>
               </div>
           </section>
+
+          <h2>Embedded YouTube Video</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/11coqrn9ubk" 
+                  title="YouTube video player" frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen>
+          </iframe>
+          
         </main>
 
 
