Created .js files in pages folder

--- a/info442/public/MyEvent.html
+++ b/info442/public/MyEvent.html
@@ -13,6 +13,7 @@
         <nav>
             <div class="logo">PNW Connect</div>
             <input type="text" placeholder="Search an Event">
+            <a href="#" onclick="navigate('home'); return false;">Home</a>
         </nav>
     </header>
     <div class="container">
@@ -50,5 +51,8 @@
         <p>© 2024 INFO442</p>
        </div>
     </footer>
+    <script src="myevent.js"></script>
+    <script src="router.js"></script>
 </body>
 </html>
+
