--- a/info442/public/profilepage.html
+++ b/info442/public/profilepage.html
@@ -23,5 +23,9 @@
             <a href="https://linkedin.com">LinkedIn</a>
         </p>
     </div>
+    <footer>
+        <p>&copy; 2024 PNW Connects. All rights reserved.</p>
+        <p>Contact: contact@pnwconnects.com</p>
+    </footer>
 </body>
 </html>
