--- a/info442/public/signup.html
+++ b/info442/public/signup.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../src/styles.css">
 </head>
 <body>
     <div class="form-container">
         <h2>Create Your Account</h2>
-        <form action="login.html" method="post">
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required>
-
+        <form id="signupForm">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
@@ -30,5 +27,40 @@
         
         <p>Already have an account? <a href="login.html">Log in here</a></p>
     </div>
+    
+    <footer>
+        <p>&copy; 2024 PNW Connects. All rights reserved.</p>
+        <p>Contact: contact@pnwconnects.com</p>
+    </footer>
+
+    <!-- Import Firebase authentication functionality -->
+    <script type="module">
+        import { auth } from './firebase-config.js';
+        import { createUserWithEmailAndPassword } from "firebase/auth";
+
+        // Handle signup form submission
+        document.getElementById("signupForm").addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+            const confirmPassword = document.getElementById("confirm-password").value;
+
+            // Check if passwords match
+            if (password !== confirmPassword) {
+                alert("Passwords do not match. Please try again.");
+                return;
+            }
+
+            try {
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                console.log("User signed up:", userCredential.user);
+                // Redirect to the login page after successful sign up
+                window.location.href = "/login.html";
+            } catch (error) {
+                console.error("Error signing up:", error.message);
+                alert("Error signing up. Please try again.");
+            }
+        });
+    </script>
 </body>
 </html>
