login button fix

--- a/info442/public/loginpage.html
+++ b/info442/public/loginpage.html
@@ -29,7 +29,7 @@
 
     <!-- Import Firebase authentication functionality -->
     <script type="module">
-        import { auth } from './firebase-config.js';
+        import { auth } from './firebase.js';
         import { signInWithEmailAndPassword } from "firebase/auth";
 
         // Handle login form submission
