--- a/info442/public/signup.html
+++ b/info442/public/signup.html
@@ -25,7 +25,7 @@
             <button type="submit">Sign Up</button>
         </form>
         
-        <p>Already have an account? <a href="login.html">Log in here</a></p>
+        <p>Already have an account? <a href="loginpage.html">Log in here</a></p>
     </div>
     
     <footer>
@@ -35,7 +35,7 @@
 
     <!-- Import Firebase authentication functionality -->
     <script type="module">
-        import { auth } from './firebase-config.js';
+        import { auth } from './firebase.js';
         import { createUserWithEmailAndPassword } from "firebase/auth";
 
         // Handle signup form submission
