--- a/info442/public/event.html
+++ b/info442/public/event.html
@@ -17,7 +17,7 @@
             <option value="sports">Sports</option>
             <option value="arts & theatre">Theater</option>
         </select>
-        <button onclick="filterEvents()">Filter</button>
+        <button id="filterButton" onclick="filterEvents()">Filter</button>
     </div>
     
     <div id="events-container"></div>
